2004-09-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the genre combo when ripping.

	* src/sj-main.c:
	Reset the genre combo when the CD is changed.

2004-09-08  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* bacon-cd-selection.h:
	* cd-drive.c:
	* cd-drive.h:
	* dvd_plus_rw_utils.cpp:
	Updated from n-c-b HEAD.

2004-09-07  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix a rare divide-by-zero, spotted by James Courtier-Dutton.

2004-08-26  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add a genre combo.

	* src/sj-genres.[ch]:
	Add a genre enum, map and name functions.

	* src/Makefile.am:
	Added sj-genres.[ch]
	
	* src/sj-structures.h:
	Add a genre field.

	* src/sj-metadata-musicbrainz.c:
	Initialise the genre field.
	
	* src/sj-main.c:
	Populate the genre map and set the genre field.

	* src/sj-prefs.c:
	Set the genre field in the sample track.
	
	* src/sj-extractor.c:
	Write the genre field, if set.

2004-08-25  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Be more paranoid about invalid GConf keys.

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-07-18  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Check cdroms has been initialized in cd_drive_exists(). Based on a
	patch from Emil Soleyman-Zomalan.

2004-07-10  William Jon McCann  <mccann@jhu.edu>

	* src/sj-extractor.c (tick_timeout_cb):
	Cast pipeline to a GstBin.

2004-07-09  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add gst_bin_iterate() to the tick timeout callback to ensure it
	gets called frequently on fast systems. Patch from David Arnold.

2004-06-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use E_xtract instead of _Extract to avoid conflicting with the
	Edit menu.

2004-06-27  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (check_for_file):
	Escape filename to utf8 before displaying it.
