@@ -202,85 +202,85 @@ sj_genre_name (SjGenre genre)
  * The map of all genres => entry in short genre list.
  */
 GenreMap genremap[] = {
-{BLUES, BLUES},
-{CLASSIC_ROCK, ROCK},
-{COUNTRY, COUNTRY},
-{DANCE, DANCE},
-{DISCO, DISCO},
-{FUNK, FUNK},
-{GRUNGE, GRUNGE},
-{HIP_HOP, RAP},
-{JAZZ, JAZZ},
-{METAL, METAL},
-{NEW_AGE, NEW_AGE},
-{OLDIES, OLDIES},
-{OTHER, OTHER},
-{POP, POP},
-{R_AND_B, R_AND_B},
-{RAP, RAP},
-{REGGAE, REGGAE},
-{ROCK, ROCK},
-{TECHNO, TECHNO},
-{INDUSTRIAL, INDUSTRIAL},
-{ALTERNATIVE, ALTERNATIVE},
-{SKA, SKA},
-{DEATH_METAL, DEATH_METAL},
-{PRANKS, PRANKS},
-{SOUNDTRACK, SOUNDTRACK},
-{EURO_TECHNO, EURO_TECHNO},
-{AMBIENT, AMBIENT},
-{TRIP_HOP, TRIP_HOP},
-{VOCAL, VOCAL},
-{JAZZ+FUNK, JAZZ+FUNK},
-{FUSION, FUSION},
-{TRANCE, TRANCE},
-{CLASSICAL, CLASSICAL},
-{INSTRUMENTAL, INSTRUMENTAL},
 {ACID, ACID},
-{HOUSE, HOUSE},
-{GAME, GAME},
-{SOUND_CLIP, SOUND_CLIP},
-{GOSPEL, GOSPEL},
-{NOISE, NOISE},
+{ACID_JAZZ, JAZZ},
+{ACID_PUNK, ACID_PUNK},
+{ALTERNATIVE, ALTERNATIVE},
 {ALTERNROCK, ALTERNROCK},
+{AMBIENT, AMBIENT},
 {BASS, BASS},
-{SOUL, SOUL},
-{PUNK, PUNK},
-{SPACE, SPACE},
-{MEDITATIVE, MEDITATIVE},
+{BLUES, BLUES},
+{CABARET, CABARET},
+{CHRISTIAN_RAP, RAP},
+{CLASSICAL, CLASSICAL},
+{CLASSIC_ROCK, ROCK},
+{COMEDY, COMEDY},
+{COUNTRY, COUNTRY},
+{CULT, CULT},
+{DANCE, DANCE},
+{DARKWAVE, DARKWAVE},
+{DEATH_METAL, DEATH_METAL},
+{DISCO, DISCO},
+{DREAM, DREAM},
+{ELECTRONIC, ELECTRONIC},
+{ETHNIC, ETHNIC},
+{EURODANCE, EURODANCE},
+{EURO_TECHNO, EURO_TECHNO},
+{FUNK, FUNK},
+{FUSION, FUSION},
+{GAME, GAME},
+{GANGSTA, RAP},
+{GOSPEL, GOSPEL},
+{GOTHIC, GOTHIC},
+{GRUNGE, GRUNGE},
+{HARD_ROCK, ROCK},
+{HIP_HOP, RAP},
+{HOUSE, HOUSE},
+{INDUSTRIAL, INDUSTRIAL},
+{INSTRUMENTAL, INSTRUMENTAL},
 {INSTRUMENTAL_POP, POP},
 {INSTRUMENTAL_ROCK, ROCK},
-{ETHNIC, ETHNIC},
-{GOTHIC, GOTHIC},
-{DARKWAVE, DARKWAVE},
-{TECHNO_INDUSTRIAL, TECHNO_INDUSTRIAL},
-{ELECTRONIC, ELECTRONIC},
-{POP_FOLK, POP_FOLK},
-{EURODANCE, EURODANCE},
-{DREAM, DREAM},
-{SOUTHERN_ROCK, ROCK},
-{COMEDY, COMEDY},
-{CULT, CULT},
-{GANGSTA, RAP},
-{TOP_40, TOP_40},
-{CHRISTIAN_RAP, RAP},
-{POP/FUNK, POP/FUNK},
+{JAZZ+FUNK, JAZZ+FUNK},
+{JAZZ, JAZZ},
 {JUNGLE, JUNGLE},
-{NATIVE_AMERICAN, NATIVE_AMERICAN},
-{CABARET, CABARET},
-{NEW_WAVE, NEW_WAVE},
-{PSYCHADELIC, PSYCHADELIC},
-{RAVE, RAVE},
-{SHOWTUNES, SHOWTUNES},
-{TRAILER, TRAILER},
 {LO_FI, LO_FI},
-{TRIBAL, TRIBAL},
-{ACID_PUNK, ACID_PUNK},
-{ACID_JAZZ, JAZZ},
-{POLKA, POLKA},
-{RETRO, RETRO},
+{MEDITATIVE, MEDITATIVE},
+{METAL, METAL},
 {MUSICAL, MUSICAL},
+{NATIVE_AMERICAN, NATIVE_AMERICAN},
+{NEW_AGE, NEW_AGE},
+{NEW_WAVE, NEW_WAVE},
+{NOISE, NOISE},
+{OLDIES, OLDIES},
+{OTHER, OTHER},
+{POLKA, POLKA},
+{POP, POP},
+{POP/FUNK, POP/FUNK},
+{POP_FOLK, POP_FOLK},
+{PRANKS, PRANKS},
+{PSYCHADELIC, PSYCHADELIC},
+{PUNK, PUNK},
+{RAP, RAP},
+{RAVE, RAVE},
+{REGGAE, REGGAE},
+{RETRO, RETRO},
+{ROCK, ROCK},
 {ROCK_AND_ROLL, ROCK},
-{HARD_ROCK, ROCK},
+{R_AND_B, R_AND_B},
+{SHOWTUNES, SHOWTUNES},
+{SKA, SKA},
+{SOUL, SOUL},
+{SOUNDTRACK, SOUNDTRACK},
+{SOUND_CLIP, SOUND_CLIP},
+{SOUTHERN_ROCK, ROCK},
+{SPACE, SPACE},
+{TECHNO, TECHNO},
+{TECHNO_INDUSTRIAL, TECHNO_INDUSTRIAL},
+{TOP_40, TOP_40},
+{TRAILER, TRAILER},
+{TRANCE, TRANCE},
+{TRIBAL, TRIBAL},
+{TRIP_HOP, TRIP_HOP},
+{VOCAL, VOCAL},
 {LAST_GENRE, LAST_GENRE}
 };
