@@ -1,5 +1,10 @@
 2004-09-13  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-genres.c:
+	Sort the genre list.
+
+2004-09-13  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	Disable the genre combo when ripping.
 
